k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: ljinan/multi-server
          #multi-server image containers a few key value pair configurations that needs to be used to access postgres/redis. these configurations also need to be added
          ports:
            - containerPort: 5000
