k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: ljinan/multi-worker
    # no other pods will be making a request to multi-worker
    # does not need to have any pod/service assigned to multi-worker
    # only make use of services if we want to have requests going into the pod
